<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextFirstLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinnerSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageViewUsername"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="12sp"
        android:layout_weight="0.36"
        android:contentDescription="@string/imageView_username"
        android:onClick="retrievePicture"
        android:src="@drawable/ic_userprofile" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:hint="@string/editText_phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextBiography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_biography"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveUserProfile"
        android:text="@string/button_save" />

</LinearLayout>