<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TopCommentsActivity" >

     <ListView
         android:id="@+id/android:list"
         android:layout_width="fill_parent"
         android:layout_height="500dp"
         android:layout_below="@+id/comment"
         android:scrollbars="vertical" >

     </ListView>

     <Button
         android:id="@+id/favorite"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/button1"
         android:layout_toRightOf="@+id/comment"
         android:onClick="viewFavorites"
         android:textSize="12sp"
         android:text="@string/favButton" />

     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/favorite"
         android:layout_alignBottom="@+id/favorite"
         android:layout_alignRight="@+id/android:list"
         android:textSize="12sp"
         android:text="@string/sortButton" 
         android:onClick="sortPictures"/>

     <Button
         android:id="@+id/comment"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/android:list"
         android:layout_alignTop="@+id/favorite"
         android:onClick="popUp"
         android:text="@string/commentButton" />

</RelativeLayout>
